# ullarauter_backend

./: .gitignore  Cargo.toml  \  flake.nix
src/: main.rs
src/cache/: cache.rs  cache_routes.rs  mod.rs
src/errors/: error.rs  mod.rs
src/handlers/: admin_handlers.rs  mod.rs  pub_handlers.rs
src/helpers/: helpers.rs  mod.rs
src/models/: data.rs  db_def.rs  forms.rs  mod.rs  template_defs.rs
src/routes/: admin_routes.rs  mod.rs  routes.rs
src/services/: auth_check.rs  caching.rs  db_services.rs  mod.rs  services.rs
static/: bootstrap.min.css  full_menu_collapse.js  fullscreen.js  styles.css  works_menu_collapse.js  works_menu_collapse_fp.js
templates/: admin.html  admin_login.html  bio.html  bio_exhibs.html  contact.html  edit_project.html  footer.html  head.html  hello.html  index.html  login.html  old_sidebar.html  project.html  sidebar_de.html  sidebar_eng.html  sidebar_exhibs.html  test_upload.html  upload.html
