[package]
name = "actix_test"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-files  = "0.6.6"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-identity = "0.8.0"
actix-multipart = "0.7.2"
askama = "0.12.1"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }
serde = "1.0.210"
validator = "0.18.1"
chrono = "0.4.38"
rand = "0.8"
serde_json = "1.0.128"
futures-util = "0.3.30"
mime = "0.3.17"
lazy_static = "1.5.0"
# tokio = { verison = "1.0", features = ["time"] }
tokio = { version = "1.0", features = ["time"] }
thiserror = "2.0.12"
